[package]
name = "id3stego"
version = "0.2.0"
edition = "2021"
author = "frozenburrito"
description = "Audio file (mp3, wav, aiff) metadata (id3v2) steganography (for educational use only)." 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["cargo"] }
id3 = "1.5.0"
infer = "0.11.0"
rand = "0.8.5"
